--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,1 @@
-<div class="jumbotron mt-4">
-    <h1 class="display-8">Proyecto coke-KRONOS</h1>
-    <p class="lead">Nuestro Software de Gestión de Operaciones Grúa Horquilla está diseñado para optimizar y automatizar el registro de las operaciones realizadas por los operadores de grúas horquilla en el entorno logístico con el objetivo de mejorar el control, la productividad, la eficiencia y visibilidad de las operaciones.</p>
-    <hr class="my-4">
-
-</div>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae eius cum aspernatur doloribus ipsum ut, inventore numquam quo et odio optio. Saepe tempora maxime natus ab assumenda in quaerat sint.</p>
