Integración CSS y HTML (public/css) y .hbs

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>coke_KRONOS</title>
+    <!-- Cargar CSS Principal -->
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- Cargar CSS Específico para Login -->
+    <link rel="stylesheet" href="css/login.css">
+    <!-- Cargar CSS ventana espera -->
+    <link rel="stylesheet" href="css/espera.css">
+    <!-- Cargar CSS ventana seleccion tarea -->
+    <link rel="stylesheet" href="css/seleccionTarea.css">
+
+
 </head>
 <body>
     {{{body}}}
