Simulación ingreso de codigo desde ventana "espera"

--- a/src/views/espera.hbs
+++ b/src/views/espera.hbs
@@ -11,6 +11,12 @@
 
     <!-- Mensaje de Espera -->
         <p class="waiting-message">Por favor, escanea el código para continuar.</p>
+
+    <!-- Formulario para ingresar código manualmente -->
+    <form action="/tareas">
+        <input type="text" name="idTarea" placeholder="Ingrese código" required>
+        <button type="submit" class="submit-btn">Enviar</button>
+    </form>
     
     <!-- Botón de Cancelar (Opcional) -->
         <button id="cancelBtn" class="cancel-btn">Cancelar</button>
