Recordatorio de tareas restantes

--- a/src/views/tareas.hbs
+++ b/src/views/tareas.hbs
@@ -1,4 +1,5 @@
 <!-- Contenedor Principal de Selección de Tarea -->
+<!-- TODO: Daniela, Agregar las tareas faltantes según historias de Usuario-->
     <div class="task-container">
         <h1>Coke-KRONOS</h1>
         <h2>Selecciona la Tarea a Realizar</h2>
