Implementación funciones para guardar y eliminar tareas en la base de datos, INSTRUCCIONES.txt

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -13,6 +13,8 @@
     <!-- Cargar CSS ventana seleccion tarea -->
     <link rel="stylesheet" href="css/seleccionTarea.css">
 
+    <link href="https://cdn.jsdelivr.net/npm/fontawesome-4.7@4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
 
 </head>
 <body>
