--- a/src/views/espera.hbs
+++ b/src/views/espera.hbs
@@ -1,25 +1,24 @@
-<!-- Contenedor Principal de Esperando Escaneo -->
-    <div class="scan-waiting-container">
-        <h1>Coke-KRONOS</h1>
-        <h2>Esperando Escaneo...</h2>
+<div class="scan-waiting-container">
+    <h1>Coke-KRONOS</h1>
+    <h2>Esperando Escaneo...</h2>
 
     <!-- Mostrar la tarea seleccionada -->
-        <p class="selected-task" id="selectedTask">Tarea seleccionada: </p>
+    <p class="selected-task" id="selectedTask">Tarea seleccionada: </p>
 
     <!-- Animación de Carga -->
-        <div class="loader"></div>
+    <div class="loader"></div>
 
     <!-- Mensaje de Espera -->
-        <p class="waiting-message">Por favor, escanea el código para continuar.</p>
+    <p class="waiting-message">Por favor, escanea el código para continuar.</p>
 
     <!-- Formulario para ingresar código manualmente -->
-    <form action="/tareas">
+    <form action="/tareas/tarea-nueva" method="POST">
         <input type="text" name="idTarea" placeholder="Ingrese código" required>
         <button type="submit" class="submit-btn">Enviar</button>
     </form>
-    
-    <!-- Botón de Cancelar (Opcional) -->
-        <button id="cancelBtn" class="cancel-btn">Cancelar</button>
-    </div>
 
-    <script src="javascript/espera.js"></script>
+    <!-- Botón de Cancelar (Opcional) -->
+    <button id="cancelBtn" class="cancel-btn">Cancelar</button>
+</div>
+
+<script src="javascript/espera.js"></script>
