Bases para conexión entre login y bases de datos

--- a/src/views/tareas/tarea-nueva.hbs
+++ b/src/views/tareas/tarea-nueva.hbs
@@ -1,6 +1,7 @@
 <!-- Contenedor Principal de Esperando Escaneo -->
 <head>
     <link rel="stylesheet" href="/css/espera.css">
+    <link rel="stylesheet" href="/css/footer.css">
 
 </head>
 
