--- a/src/views/tareas/edit-tarea.hbs
+++ b/src/views/tareas/edit-tarea.hbs
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="/css/espera.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <style>
         .container {
             max-width: 400px;
