Funciones para LogUp y LogIn vinculadas a base de datos, DETALLES.txt, INSTRUCCIONES.txt

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -21,6 +21,7 @@
 </head>
 <body>
     {{>messages}}
+    {{>errors}}
     {{{body}}}
 </body>
 
@@ -30,7 +31,9 @@
         <div class="dropdown-content" id="dropdownMenu">
             <a href="/tareas/add">Escanear Ticket</a>
             <a href="/tareass">Ver Tickets Escaneados</a>
-            <a href="/">volver a login</a>
+            <a href="/">volver a login Fake</a>
+            <a href="/users/signin">login Real</a>
+            <a href="/users/signup">Registrar usuario Real</a>
         </div>
     </div>
 </footer>
