--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -10,7 +10,7 @@
                 Inicio de Sesión
             </div>
             <div class="card-body">
-                <form action="users/signin" method="POST">                    
+                <form action="/users/signin" method="POST">                    
                     <div class="form-group">
                         <input type="email" class="form-control" name="email" placeholder="Email">
                     </div>
