Conexión login final con DB, solucion errores CSS

--- a/src/views/tareas/all-tareas.hbs
+++ b/src/views/tareas/all-tareas.hbs
@@ -1,6 +1,6 @@
-<style>
-    
-</style>
+<head>
+    <link rel="stylesheet" href="/css/footer.css">
+</head>
 
 <div class="grid-container">
     {{#each tareas}}
