--- a/src/views/tareas/escanearBahia.hbs
+++ b/src/views/tareas/escanearBahia.hbs
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/escanearBahia.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 <!-- Contenedor principal de la pantalla de escaneo -->
