--- a/src/views/tareas/escanearPalletCambio.hbs
+++ b/src/views/tareas/escanearPalletCambio.hbs
@@ -5,6 +5,7 @@
     <title>Escanear Pallets y Bahía de Destino</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/escanear_pallets_cambio.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 
