--- a/src/views/tareas/espera.hbs
+++ b/src/views/tareas/espera.hbs
@@ -2,6 +2,7 @@
 <head>
     <title>Esperando Escaneo - Coke Kronos</title>
     <link rel="stylesheet" href="/css/espera.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 
