--- a/src/views/users/olvido.hbs
+++ b/src/views/users/olvido.hbs
@@ -5,6 +5,7 @@
     <title>Recuperar Contraseña - Coke Kronos</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/olvido.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 
