--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,6 +5,8 @@
     <title>Login - Coke Kronos</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/espera.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 
@@ -14,25 +16,25 @@
         <h1>Coke-KRONOS</h1>
 
         <!-- Formulario de inicio de sesión -->
-        <form id="loginForm">
+        <form id="loginForm" action="/users/signin" method="POST">
 
             <!-- Grupo de input para el usuario -->
             <div class="input-group">
-                <input type="text" id="username" required placeholder=" ">
-                <label for="username">Usuario</label>
+                <input type="email" class="form-control" name="email" placeholder="Email">
             </div>
 
             <!-- Grupo de input para la contraseña -->
             <div class="input-group">
-                <input type="password" id="password" required placeholder=" ">
-                <label for="password">Contraseña</label>
+                <input type="password" class="form-control" name="password" placeholder="Contraseña">
             </div>
 
             <!-- Botón de envío del formulario -->
-            <button type="submit" class="login-btn">Ingresar</button>
+            <button class="btn btn-primary btn-block">
+                        Iniciar Sesión                       
+            </button>
 
             <!-- Mensaje de error que se mostrará si la validación falla -->
-            <p id="errorMessage" class="error-message"></p>
+            <!--<p id="errorMessage" class="error-message"></p>-->
 
             <!-- Enlace para recuperación de contraseña -->
             <p><a href="/users/olvido" class="forgot-password">¿Olvidaste tu contraseña?</a></p>
@@ -40,5 +42,5 @@
     </div>
 </div>
 <!-- Enlace al script de validación y manejo de login -->
-<script src="/javascript/login.js"></script>
+<!--<script src="/javascript/login.js"></script>
 
