--- a/src/views/tareas/esperaCambioBahia.hbs
+++ b/src/views/tareas/esperaCambioBahia.hbs
@@ -3,8 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esperando Acción</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/espera_cambio_bahia.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/espera_cambio_bahia.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 
