--- a/src/views/tareas/resumenCargaCamion.hbs
+++ b/src/views/tareas/resumenCargaCamion.hbs
@@ -3,8 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resumen de Carga</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/resumen_carga_camion.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/resumen_carga_camion.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 
