Obtener Transporte desde el código del Ticket

--- a/src/views/tareas/espera.hbs
+++ b/src/views/tareas/espera.hbs
@@ -12,7 +12,7 @@
 
     <!-- Campo para ingresar el código numérico -->
     <label for="codeInput">Ingrese Código:</label>
-    <input type="number" id="codeInput" placeholder="Código numérico" />
+    <input type="string" id="codeInput" placeholder="Código numérico" />
 
     <button class="submit-code-btn" id="submitCodeBtn">Confirmar Código</button>
 
