--- a/src/views/tareas/escanearBahia.hbs
+++ b/src/views/tareas/escanearBahia.hbs
@@ -12,7 +12,7 @@
 
     <!-- Campo para ingresar el código numérico -->
     <label for="codeInput">Ingrese Código:</label>
-    <input type="number" id="codeInput" placeholder="Escanea la bahía..." />
+    <input type="string" id="codeInput" placeholder="Escanea la bahía..." />
 
     <!-- Botón para confirmar el escaneo de la bahía (inicialmente deshabilitado) -->
     <button class="submit-code-btn" id="submitCodeBtn">Confirmar Código</button>
