--- a/src/public/css/espera.css
+++ b/src/public/css/espera.css
@@ -81,7 +81,7 @@ body {
 /*Estilo del botón cancelar*/
 .cancel-btn {
     background: var(--celeste-claro);
-    color: var(--celeste-oscuro);
+    color: var(--blanco); /*CAMBIO AQUÍ*/
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -133,3 +133,13 @@ body {
         font-size: 20px;
     }
 }
+
+/*NUEVO*/
+.user-info {
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--celeste-oscuro);
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+/*HASTA ACÁ*/
