--- a/src/public/css/espera_carga_camion.css
+++ b/src/public/css/espera_carga_camion.css
@@ -12,22 +12,23 @@
 /*Estilos del título h1 y el texto p*/
 h1 {
     color: var(--celeste-oscuro);
-    font-size: 24px;
+    font-size: 22px; /*CAMBIO AQUÍ*/
 }
 
 p {
-    font-size: 16px;
+    font-size: 14px; /*CAMBIO AQUÍ*/
     color: var(--celeste-oscuro);
 }
 
 /*Estilos del campo de entrada*/
 input {
-    width: 100%;
-    padding: 10px;
+    box-sizing: border-box; /* SE AGREGÓ ESTA LÍNEA */
+    width: 80%; /*CAMBIO AQUÍ*/
+    padding: 8px; /*CAMBIO AQUÍ*/
     border: 1px solid var(--celeste-claro);
     border-radius: 5px;
     margin-top: 10px;
-    font-size: 16px;
+    font-size: 14px; /*CAMBIO AQUÍ*/
     text-align: center;
 }
 
@@ -35,12 +36,13 @@ input {
 button {
     background: var(--celeste-oscuro);
     color: white;
-    padding: 10px;
+    padding: 8px; /* CAMBIO AQUÍ  */
+    font-size: 14px; /* SE AGREGÓ ESTA LÍNEA */
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 15px;
-    width: 100%;
+    width: 80%; /*CAMBIO AQUÍ*/
 }
 
 button:hover {
@@ -63,3 +65,13 @@ a {
 a:hover {
     color: var(--celeste-claro);
 }
+
+/*NUEVO*/
+.user-info {
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--celeste-oscuro);
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+/*HASTA ACÁ*/
