--- a/src/public/css/espera_pallet.css
+++ b/src/public/css/espera_pallet.css
@@ -23,8 +23,8 @@ body {
 .container {
     background: var(--blanco);
     padding: 30px;
-    max-width: 350px;
-    width: 90%;
+    max-width: 300px; /*CAMBIO AQUÍ*/
+    width: 80%; /*CAMBIO AQUÍ*/
     border-radius: 15px;
     box-shadow: 0 6px 12px var(--sombra-cuadro);
     text-align: center;
@@ -49,7 +49,7 @@ p {
 
 /*Estilo del botón terminar tarea*/
 button {
-    background: var(--celeste-oscuro);
+    background: var(--celeste-claro); /*CAMBIO AQUÍ*/
     color: var(--blanco);
     padding: 12px;
     border: none;
@@ -110,3 +110,14 @@ a:hover {
         font-size: 14px;
     }
 }
+
+/*NUEVO*/
+.user-info {
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--celeste-oscuro);
+    margin-bottom: 10px;
+    margin-top: 20px;
+    display: block;
+}
+/*HASTA ACÁ*/
