--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -12,6 +12,7 @@
 
 <!-- Contenedor principal del login -->
 <div class="login-container">
+    <h2>Ingrese sus Datos</h2>
     <div class="login-card">
 
         <!-- Formulario de inicio de sesión -->
