--- a/src/public/css/escanearBahia.css
+++ b/src/public/css/escanearBahia.css
@@ -35,7 +35,7 @@ input {
 
 /*Estilos del botón confirmar*/
 button {
-    background: var(--celeste-claro); /*CAMBIO AQUÍ*/
+    background: var(--celeste-oscuro); /*CAMBIO AQUÍ*/
     color: white;
     padding: 10px;
     border: none;
