--- a/src/public/css/resumen_carga_camion.css
+++ b/src/public/css/resumen_carga_camion.css
@@ -25,7 +25,7 @@ p {
 
 /*Estilos del botón confirmar*/
 button {
-    background: var(--celeste-claro); /*CAMBIO AQUÍ*/
+    background: var(--celeste-oscuro); /*CAMBIO AQUÍ*/
     color: white;
     padding: 10px;
     border: none;
