Corrección error  confirmación código de ticket en pantalla (Cambio de Bahía)

--- a/src/views/users/postlogin.hbs
+++ b/src/views/users/postlogin.hbs
@@ -9,7 +9,8 @@
         // Guardamos en Local Storage
         const usuarioActual = {
             name: "{{name}}",
-            email: "{{email}}"
+            email: "{{email}}",
+            id: "{{id}}" // Aquí agregamos el ObjectId
         };
         localStorage.setItem('usuarioActual', JSON.stringify(usuarioActual));
 
