- (Daniela) Error pallet repetido interfaz, Error códigos carga camión interfaz, Texto indicando Bahía de origen, Nombre de usuario en interfaz

--- a/src/public/css/escanear_pallets_cambio.css
+++ b/src/public/css/escanear_pallets_cambio.css
@@ -78,6 +78,14 @@ a:hover {
 }
 
 /*NUEVO*/
+#mensaje2 {
+    font-size: 15px; /*CAMBIO AQUÍ*/
+    font-weight: bold;
+    margin-top: 8px;
+    color: green;
+}
+
+/*NUEVO*/
 .user-info {
     font-size: 16px;
     font-weight: bold;
