--- a/src/views/tareas/escanearPalletCambio.hbs
+++ b/src/views/tareas/escanearPalletCambio.hbs
@@ -22,6 +22,9 @@
     <!-- Lista donde se mostrarán los pallets escaneados -->
     <ul id="palletList"></ul>
 
+    <!-- NUEVO -->
+    <p id="mensaje2"></p>
+
     <h2>Escanear Bahía Destino</h2><!-- Subtítulo indicando la acción a realizar -->
 
     <!-- Campo de entrada para escanear el código de la bahía destino -->
@@ -31,6 +34,7 @@
     <button id="confirmarBtn" disabled>Confirmar</button>
 
     <!-- Mensaje de validación, confirmación o error -->
+    <!-- CAMBIO AQUÍ -->
     <p id="mensaje"></p>
 
     <!-- Enlace para regresar a la pantalla de espera -->
