--- a/src/views/tareas/esperaCambioBahia.hbs
+++ b/src/views/tareas/esperaCambioBahia.hbs
@@ -1,4 +1,3 @@
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,18 +12,12 @@
 <div class="container">
     <h1>Esperando Acción</h1>
 
-
-    <!-- Este cambio es nuevo -->
-    <p>Escanee el pallet a cambiar.</p>
-    <!-- Input para escanear el primer pallet -->
-    <input type="text" id="palletInput" placeholder="Escanear pallet">
-
     <p>Escanee la bahía de inicio.</p>
     <!-- Input para escanear la bahía de inicio (inicialmente deshabilitado) -->
-    <input type="text" id="bahiaInput" placeholder="Escanear bahía" disabled>
+    <input type="text" id="bahiaInput" placeholder="Escanear bahía">
 
     <!-- Botón para continuar, inicialmente deshabilitado -->
-    <button id="continuarBtn" disabled>Continuar</button>
+    <button id="continuarBtn">Continuar</button>
     <!-- Hasta acá -->
 
 
@@ -34,3 +27,4 @@
 
 <!-- Script que maneja la lógica de la espera y finalización del proceso -->
 <script src="/javascript/esperaCambioBahia.js"></script>
+
