Corrección interfaz usuario, link volver, normalización espacios dentro de los códigos.

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -43,7 +43,7 @@
 </div>
 
 <footer class="footer">
-    <div class="dropdown">
+    <!-- <div class="dropdown">
         <button class="dropdown-btn" onclick="toggleDropdown()">Opciones de desarrollo</button>
         <div class="dropdown-content" id="dropdownMenu">
             <a href="/tareas/add">Escanear Ticket</a>
@@ -52,7 +52,7 @@
             <a href="/users/signin">login Real</a>
             <a href="/users/signup">Registrar usuario Real</a>
         </div>
-    </div>
+    </div> -->
 </footer>
 
 <script>
