--- a/src/views/tareas/escanearPalletCambio.hbs
+++ b/src/views/tareas/escanearPalletCambio.hbs
@@ -6,8 +6,29 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/escanear_pallets_cambio.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <!-- Estilo en línea para modificar el p con id 'usuarioActual' -->
+    <style>
+      #usuarioActual {
+        font-size: 1.5em; /* Aumenta el tamaño del texto */
+        font-weight: bold; /* Pone el texto en negrita */
+      }
+    </style>
+    
 </head>
 
+<script>
+  // Se agrega un "event listener" para esperar a que el contenido del DOM se haya cargado completamente
+  document.addEventListener('DOMContentLoaded', function() {
+      // Se obtiene el objeto 'usuarioActual' del localStorage y se parsea desde JSON a un objeto JavaScript
+      const usuario = JSON.parse(localStorage.getItem('usuarioActual'));
+      
+      // Si el objeto 'usuario' existe en el localStorage (es decir, no es null ni undefined)
+      if (usuario) {
+        // Se actualiza el contenido del elemento con el id 'usuarioActual' con el nombre del usuario
+        document.getElementById('usuarioActual').textContent = usuario.name;
+      }
+  });
+</script>
 
 <!-- Contenedor principal de la pantalla -->
 <div class="container">
@@ -32,6 +53,9 @@
 
     <!-- Botón de confirmación deshabilitado inicialmente -->
     <button id="confirmarBtn" disabled>Confirmar</button>
+
+    <!-- Se define un elemento p con un id 'usuarioActual' -->
+    <p id="usuarioActual"></p>
 
     <!-- Mensaje de validación, confirmación o error -->
     <!-- CAMBIO AQUÍ -->
