--- a/src/views/tareas/esperaPallet.hbs
+++ b/src/views/tareas/esperaPallet.hbs
@@ -5,8 +5,29 @@
     <title>Esperando Acción</title>
     <link rel="stylesheet" href="/css/espera_pallet.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <!-- Estilo en línea para modificar el p con id 'usuarioActual' -->
+    <style>
+      #usuarioActual {
+        font-size: 1.5em; /* Aumenta el tamaño del texto */
+        font-weight: bold; /* Pone el texto en negrita */
+      }
+    </style>
+    
 </head>
 
+<script>
+  // Se agrega un "event listener" para esperar a que el contenido del DOM se haya cargado completamente
+  document.addEventListener('DOMContentLoaded', function() {
+      // Se obtiene el objeto 'usuarioActual' del localStorage y se parsea desde JSON a un objeto JavaScript
+      const usuario = JSON.parse(localStorage.getItem('usuarioActual'));
+      
+      // Si el objeto 'usuario' existe en el localStorage (es decir, no es null ni undefined)
+      if (usuario) {
+        // Se actualiza el contenido del elemento con el id 'usuarioActual' con el nombre del usuario
+        document.getElementById('usuarioActual').textContent = usuario.name;
+      }
+  });
+</script>
 
 <!-- Contenedor principal de la interfaz -->
 <div class="container">
@@ -15,6 +36,9 @@
 
     <!-- Botón para indicar que la tarea ha finalizado -->
     <button onclick="terminarTarea()">Terminar Tarea</button>
+
+    <!-- Se define un elemento p con un id 'usuarioActual' -->
+    <p id="usuarioActual"></p>
 
     <!-- Enlace para cancelar la operación y volver a la pantalla de espera -->
     <a href="/tareas/espera">Cancelar</a>
