Bases implementación lector archivos .csv

--- a/src/views/tareas/seleccion.hbs
+++ b/src/views/tareas/seleccion.hbs
@@ -45,7 +45,7 @@
     <button class="task-btn" data-task="retirar-pallet">Retirar Pallet a Bahía de Carga</button>
     <button class="task-btn" data-task="cambio-entre-bahías">Cambio entre Bahías de Carga</button>
     
-    <!-- Se define un elemento h1 con un id 'usuarioActual' que inicialmente muestra "Cargando..." -->
+    <!-- Se define un elemento p con un id 'usuarioActual' -->
     <p id="usuarioActual"></p>
 
     <!-- Botón para cerrar sesión -->
